--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,7 @@
+2012-12-08: 0.1.1
+  * Fix installing nuts from www.gonuts.io.
+  * Documentation improvements.
+  + Travis CI integration.
+
 2012-12-07: 0.1.0
   + First announced version.
