--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+2012-12-16: 0.2.0
+  + Add homepage to spec.
+  + Read -v from .nut.json.
+  * Write .nut.json in some cases.
+  * Do not panic in some cases.
+  * Fix bug in `nut check` for spec file in other directory.
+  - Remove confusing -server option (was useful only for development).
+
 2012-12-09: 0.1.2
   * Nut names should be lower case.
   * Documentation improvements.
