--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 2013-yy-zz: develop
   + `nut get` now downloads and installs all dependencies (recursive).
   + `nut get` now may be used without arguments.
+  + New API for Nut: FilePath(), ImportPath()
   * Fix bug with `nut get` and www.-prefixed hosts.
 
 2012-12-16: 0.2.0
