--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
-2013-yy-zz: develop
+2013-02-zz: develop
   + `nut get` now downloads and installs all dependencies (recursive).
   + `nut get` now may be used without arguments.
   + New API for Nut: FilePath(), ImportPath()
+  * `nut pack` now includes files for all OSes.
   * Fix bug with `nut get` and www.-prefixed hosts.
   * Fix some issues on Windows.
 
