--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
   + New API for Nut: FilePath(), ImportPath()
   * Fix bug with `nut get` and www.-prefixed hosts.
   * Fix some issues on Windows.
+  * Fix -h and extra arguments handling.
   - Disallow package names ending with "_".
 
 2012-12-16: 0.2.0
