--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,7 @@
   + `nut get` now downloads and installs all dependencies (recursive).
   + `nut get` now may be used without arguments.
   * `nut pack` now includes files for all OSes.
-  + New API for Nut: FilePath(), ImportPath()
+  + New API for Nut: ReadFrom(), FilePath(), ImportPath().
   * Fix bug with `nut get` and www.-prefixed hosts.
   * Fix some issues on Windows.
   * Fix -h and extra arguments handling.
