--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 2013-xx-yy: 0.4.dev
+  + New API for Spec: WriteFile().
   + Store vendor and author in ~/.nut.json, use them in `nut generate`.
   * Abort if ~/.nut.json is not empty and has invalid format.
   * Documentation improvements.
